[package]
name = "oyasumi"
version = "0.1.0"
authors = ["Hiccup Enthusiast"]
description = "A hands-free wrapper for multiple anime APIs."
edition = "2021"
repository = "https://github.com/HiccupEnthusiast/oyasumi"
readme = "README.md"
license = "MIT"
keywords = ["http", "search", "anime", "image", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
